--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" url="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>reken spel</title>
   </head>
   <body>
-
     <div class="wrapper">
-      <h1>reken spel</h1>
+      <h1 id="Rekenspel">Rekenspel 1.0</h1>
       <div id="myAssignment">  .  </div>
         <input type="text" id="myAnswer" autofocus>
+        <img src="img/Niks.png" id="feedback">
     </div>
     <script src="script.js" charset="utf-8"></script>
   </body>
